--- a/index.html
+++ b/index.html
@@ -5,29 +5,43 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
+  <title>Store-Variation</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+
+  <!-- font awesome  -->
+  <script src="https://kit.fontawesome.com/c11cb7e511.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
+  <main class="container">
+    <!-- <h1>Welcome to Store-Variation</h1>  -->
+    <div class="search-field custom-margin">
+      <h1 class="text-center ">Welcome to ~Store-Variation~</h1>
+      <h5 class="text-center text-secondary">Get your products at the best deal !</5>
+        <!-- <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
         <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
           autocomplete="off" id="search-btn" onclick="loadProducts()">
           Search
-        </button>
-      </div>
+        </button> -->
+        <div class="input-group w-50 mx-auto custom-margin">
+          <input type="text" class="form-control" placeholder="Search your product" aria-label="Recipient's username"
+            aria-describedby="button-addon2">
+          <button class="btn btn-outline-dark" type="button" id="button-addon2">Search</button>
+        </div>
+    </div>
     </div>
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
@@ -39,7 +53,7 @@
         <div class="cart" id="my-cart">
           <table class="table">
             <thead>
-              <h1>My-Cart</h1>
+              <h2>My-Cart</h2>
               <tr>
                 <th scope="col"></th>
                 <th scope="col"></th>
@@ -80,7 +94,7 @@
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-outline-primary text-center">Buy Now</button>
           </div>
         </div>
       </div>
