--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <main class="container">
     <!-- <h1>Welcome to Store-Variation</h1>  -->
     <div class="search-field custom-margin">
-      <h1 class="text-center ">Welcome to ~Store-Variation~</h1>
-      <h5 class="text-center text-secondary">Get your products at the best deal !</5>
+      <h1 class="text-center ">Welcome to ~Store-Variation~ 🛍️</h1>
+      <h5 class="text-center text-secondary">Get your products at the best deal ! &#x1F44D</5>
         <!-- <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
         <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
@@ -99,6 +99,8 @@
         </div>
       </div>
     </div>
+    <!-- modal  -->
+
   </main>
   <footer></footer>
 
